# lecture-presenter

./: .gitignore  CLAUDE.md  COURSE_FORMAT.md  LICENSE  PUBLISHING.md  README.md
.github/workflows/: build-macos.yml  build-windows.yml
lecture-app/: app-config.json  package-lock.json  package.json
lecture-app/scripts/: build-obfuscated.js  test-ppt-extra-viewer.js  test-ppte-annotator.js
lecture-app/src/: audience.html  index.html
lecture-app/src-tauri/: Cargo.toml  app-config.json  tauri.conf.json
lecture-app/src-tauri/PPT-Template/安恒/: README.md  catalog.css  catalog.html  chapter.css  chapter.html  content.css  content.html  cover.html  finish.css  finish.html  style.css
lecture-app/src-tauri/capabilities/: default.json
lecture-app/src-tauri/icons/: icon.icns
lecture-app/src-tauri/src/: lib.rs  main.rs
lecture-app/src-tauri/使用指南/: course.json
lecture-app/src-tauri/使用指南/code/: data_demo.py  hello_ppte.py
lecture-app/src-tauri/使用指南/docs/: 01-welcome.md  02-getting-started.md  03-course-management.md  04-course-format.md  05-resource-types.md  06-ppte-guide.md  07-template-ai.md  08-shortcuts.md  09-ai-membership.md  10-faq.md
lecture-app/src-tauri/使用指南/ppt-extra/feature-overview/: manifest.json  slide01.html  slide02.html  slide03.html  slide04.html  slide05.html  slide06.html
lecture-app/src-tauri/使用指南/videos/: ppte-editing.webm  quick-start.webm
lecture-app/src/css/: auth.css  course-creator.css  main.css  ppte-annotator.css  theme.css
lecture-app/src/js/: app.js  auth.js  code-viewer.js  (+18 more)
memory/: 2026-06-10-ppte-animation-blank.md
