[package]
name = "lecture-app"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
percent-encoding = "2"
mime_guess = "2"
http = "1"

[lib]
name = "lecture_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]
